added readme and test ion prod

--- a/tests/inventory/host_vars/molecule-local-instance-1-deploy-portainer.yml
+++ b/tests/inventory/host_vars/molecule-local-instance-1-deploy-portainer.yml
@@ -75,6 +75,5 @@ inv_add_apache_confs_configurations:
     security:
       disabled: false
       request_body: 4096000
-      #sec_rules_remove_by_id:
-      #  - 949110
-      #  - 933120
+      sec_rules_remove_by_id:
+        - 949110
