--- a/molecule/cicd-debian-11/requirements.yml
+++ b/molecule/cicd-debian-11/requirements.yml
@@ -18,3 +18,7 @@
 - name: "labocbz.add_apache_confs"
   src: "https://github.com/CBZ-D-velop/Ansible-Role-Labocbz-Add-Apache-Confs.git"
   version: "3.1"
+
+- name: "labocbz.add_apache_confs"
+  src: "https://github.com/CBZ-D-velop/Ansible-Role-Labocbz-Add-Apache-Confs.git"
+  version: "3.1"
