--- a/tests/inventory/group_vars/APACHE2.yml
+++ b/tests/inventory/group_vars/APACHE2.yml
@@ -27,3 +27,7 @@ inv_install_apache_enable_prefork: true
 inv_install_apache_security_core_version: "3.3.0"
 inv_install_apache_security_version: "3.0.10"
 inv_install_apache_remove_all_vhosts: true
+
+inv_logrotate_configurations_apache:
+  - "apache2"
+  - "modsecurity"
