--- a/molecule/cicd-debian-11/molecule.yml
+++ b/molecule/cicd-debian-11/molecule.yml
@@ -12,7 +12,11 @@ platforms:
     image: "${NEXUS_ADDRESS}/${DOCKER_IMAGE_DEBIAN_11_ANSIBLE}"
     command: "/sbin/init"
     #published_ports:
-    #  - "0.0.0.0:8181:8181/tcp"
+      #- "0.0.0.0:80:80/tcp"
+      #- "0.0.0.0:443:443/tcp"
+      #- "0.0.0.0:9000:9000/tcp"
+      #- "0.0.0.0:8000:8000/tcp"
+      #- "0.0.0.0:9443:9443/tcp"
     dockerfile: "Dockerfile"
     privileged: true
     pre_build_image: true
@@ -63,4 +67,4 @@ scenario:
     #- "converge"
     #- "idempotence"
     #- "verify"
-    - "destroy"
+    #- "destroy"
