--- a/molecule/cicd-debian-11/prepare.yml
+++ b/molecule/cicd-debian-11/prepare.yml
@@ -59,7 +59,7 @@
         mode: 0700
 
 # if you have any prepararion task
-- name: "Prepare Docker"
+- name: "Prepare APACHE2"
   hosts: "all:&APACHE2"
   gather_facts: true
   tasks:
