--- a/molecule/cicd-debian-11/molecule.yml
+++ b/molecule/cicd-debian-11/molecule.yml
@@ -62,10 +62,10 @@ scenario:
   test_sequence:
     - "destroy"
     - "syntax"
-    #- "dependency"
-    #- "create"
-    #- "prepare"
-    #- "converge"
-    #- "idempotence"
-    #- "verify"
-    #- "destroy"
+    - "dependency"
+    - "create"
+    - "prepare"
+    - "converge"
+    - "idempotence"
+    - "verify"
+    - "destroy"
