--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -4,12 +4,18 @@ all:
     local:
       hosts:
         molecule-local-instance-1-deploy-portainer:
-    PORTAINER:
+    cicd-docker-dind:
       hosts:
-        molecule-local-instance-1-deploy-portainer:
+        molecule-cicd-docker-dind-instance-1-deploy-portainer:
     DOCKER:
       hosts:
         molecule-local-instance-1-deploy-portainer:
+        molecule-cicd-docker-dind-instance-1-deploy-portainer:
     APACHE2:
       hosts:
         molecule-local-instance-1-deploy-portainer:
+        molecule-cicd-docker-dind-instance-1-deploy-portainer:
+    PORTAINER:
+      hosts:
+        molecule-local-instance-1-deploy-portainer:
+        molecule-cicd-docker-dind-instance-1-deploy-portainer:
