--- a/molecule/cicd-docker-dind/molecule.yml
+++ b/molecule/cicd-docker-dind/molecule.yml
@@ -8,29 +8,22 @@ driver:
   name: "docker"
 
 platforms:
-  - name: "molecule-local-instance-1-deploy-portainer"
-    image: "${NEXUS_ADDRESS}/${DOCKER_IMAGE_DEBIAN_11_ANSIBLE}"
-    command: "/sbin/init"
-    #published_ports:
-      #- "0.0.0.0:80:80/tcp"
-      #- "0.0.0.0:443:443/tcp"
-      #- "0.0.0.0:9000:9000/tcp"
-      #- "0.0.0.0:8000:8000/tcp"
-      #- "0.0.0.0:9443:9443/tcp"
-    dockerfile: "Dockerfile"
+  - name: "molecule-cicd-docker-dind-instance-1-deploy-portainer"
+    image: "${NEXUS_REPOS_DOCKER_REGISTRY}/${DOCKER_IMAGE_DOCKER_DIND_ANSIBLE}"
+    hostname: "molecule-cicd-docker-dind-instance-1-deploy-portainer"
     privileged: true
     pre_build_image: true
-    override_command: true
+    command: "/sbin/init"
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
     tmpfs:
       - "/run"
       - "/tmp"
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-      - "/var/lib/containerd:/var/lib/containerd"
     cgroupns_mode: "host"
     cgroup_manager: "cgroupfs"
-    #storage_opt: "overlay.mount_program=/usr/bin/fuse-overlayfs"
-    #storage_driver: "overlay"
+    storage_driver: "overlay2"
+    networks:
+      - name: "molecule-cicd-docker-dind-deploy-portainer"
 
 provisioner:
   name: "ansible"
@@ -44,7 +37,7 @@ provisioner:
   log: ${MOLECULE_ANSIBLE_LOG:-true}
   env:
     ANSIBLE_CONFIG: "../../.ansible.cfg"
-    ANSIBLE_FORCE_COLOR: "True"
+    ANSIBLE_FORCE_COLOR: "true"
     # disable nologs
     MOLECULE_NOLOG: 0
     # disable destroy
@@ -58,7 +51,7 @@ verifier:
   name: "ansible"
 
 scenario:
-  name: "cicd-debian-11"
+  name: "cicd-docker-dind"
   test_sequence:
     - "destroy"
     - "syntax"
