--- a/molecule/cicd-ubuntu-22/molecule.yml
+++ b/molecule/cicd-ubuntu-22/molecule.yml
@@ -8,9 +8,9 @@ driver:
   name: "docker"
 
 platforms:
-  - name: "molecule-cicd-docker-dind-instance-1-deploy-portainer"
-    image: "${NEXUS_REPOS_DOCKER_REGISTRY}/${DOCKER_IMAGE_DOCKER_DIND_ANSIBLE}"
-    hostname: "molecule-cicd-docker-dind-instance-1-deploy-portainer"
+  - name: "molecule-cicd-ubuntu-22-instance-1-deploy-portainer"
+    image: "${NEXUS_REPOS_DOCKER_REGISTRY}/${DOCKER_IMAGE_UBUNTU_22_ANSIBLE}"
+    hostname: "molecule-cicd-ubuntu-22-instance-1-deploy-portainer"
     privileged: true
     pre_build_image: true
     command: "/sbin/init"
@@ -23,7 +23,7 @@ platforms:
     cgroup_manager: "cgroupfs"
     storage_driver: "overlay2"
     networks:
-      - name: "molecule-cicd-docker-dind-deploy-portainer"
+      - name: "molecule-cicd-ubuntu-22-deploy-portainer"
 
 provisioner:
   name: "ansible"
@@ -51,7 +51,7 @@ verifier:
   name: "ansible"
 
 scenario:
-  name: "cicd-docker-dind"
+  name: "cicd-ubuntu-22"
   test_sequence:
     - "destroy"
     - "syntax"
