--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -4,18 +4,30 @@ all:
     local:
       hosts:
         molecule-local-instance-1-deploy-portainer:
-    cicd-docker-dind:
+    cicd-debian-12:
       hosts:
-        molecule-cicd-docker-dind-instance-1-deploy-portainer:
-    DOCKER:
+        molecule-cicd-debian-12-instance-1-deploy-portainer:
+    cicd-debian-11:
       hosts:
-        molecule-local-instance-1-deploy-portainer:
-        molecule-cicd-docker-dind-instance-1-deploy-portainer:
-    APACHE2:
+        molecule-cicd-debian-11-instance-1-deploy-portainer:
+    cicd-ubuntu-22:
       hosts:
-        molecule-local-instance-1-deploy-portainer:
-        molecule-cicd-docker-dind-instance-1-deploy-portainer:
+        molecule-cicd-ubuntu-22-instance-1-deploy-portainer:
     PORTAINER:
       hosts:
         molecule-local-instance-1-deploy-portainer:
-        molecule-cicd-docker-dind-instance-1-deploy-portainer:
+        molecule-cicd-debian-12-instance-1-deploy-portainer:
+        molecule-cicd-debian-11-instance-1-deploy-portainer:
+        molecule-cicd-ubuntu-22-instance-1-deploy-portainer:
+    DOCKER:
+      hosts:
+        molecule-local-instance-1-deploy-portainer:
+        molecule-cicd-debian-12-instance-1-deploy-portainer:
+        molecule-cicd-debian-11-instance-1-deploy-portainer:
+        molecule-cicd-ubuntu-22-instance-1-deploy-portainer:
+    APACHE2:
+      hosts:
+        molecule-local-instance-1-deploy-portainer:
+        molecule-cicd-debian-12-instance-1-deploy-portainer:
+        molecule-cicd-debian-11-instance-1-deploy-portainer:
+        molecule-cicd-ubuntu-22-instance-1-deploy-portainer:
