--- a/molecule/cicd-docker-dind/molecule.yml
+++ b/molecule/cicd-docker-dind/molecule.yml
@@ -8,9 +8,9 @@ driver:
   name: "docker"
 
 platforms:
-  - name: "molecule-cicd-ubuntu-22-instance-1-deploy-portainer"
-    image: "${NEXUS_REPOS_DOCKER_REGISTRY}/${DOCKER_IMAGE_UBUNTU_22_ANSIBLE}"
-    hostname: "molecule-cicd-ubuntu-22-instance-1-deploy-portainer"
+  - name: "molecule-cicd-debian-12-instance-1-deploy-portainer"
+    image: "${NEXUS_DOCKER_GROUP_REGISTRY}/${DOCKER_IMAGE__ANSIBLETEST_DEBIAN_12}"
+    hostname: "molecule-cicd-debian-12-instance-1-deploy-portainer"
     privileged: true
     pre_build_image: true
     command: "/sbin/init"
@@ -23,7 +23,7 @@ platforms:
     cgroup_manager: "cgroupfs"
     storage_driver: "overlay2"
     networks:
-      - name: "molecule-cicd-ubuntu-22-deploy-portainer"
+      - name: "molecule-cicd-debian-12-deploy-portainer"
 
 provisioner:
   name: "ansible"
@@ -34,7 +34,7 @@ provisioner:
       host_vars: "../../tests/inventory/host_vars/"
   options:
     extra-vars: "@./../../tests/tower/tower.yml"
-  log: ${MOLECULE_ANSIBLE_LOG:-true}
+  log: true
   env:
     ANSIBLE_CONFIG: "../../.ansible.cfg"
     ANSIBLE_FORCE_COLOR: "true"
@@ -51,7 +51,7 @@ verifier:
   name: "ansible"
 
 scenario:
-  name: "cicd-ubuntu-22"
+  name: "cicd-debian-12"
   test_sequence:
     - "destroy"
     - "syntax"
