--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -38,7 +38,7 @@
         dest: "/tmp/{{ bundle.name }}.zip"
         owner: "root"
         group: "root"
-        mode: 0700
+        mode: "0700"
 
     - name: "Import cryptographic content if needed (CA)"
       loop: "{{ inv_docker_cert_bundles }}"
@@ -50,7 +50,7 @@
         dest: "/tmp/{{ bundle.name }}"
         owner: "root"
         group: "root"
-        mode: 0700
+        mode: "0700"
 
     - name: "Import cryptographic content if needed (cert)"
       loop: "{{ inv_add_apache_confs__configurations_cert_bundles }}"
@@ -62,7 +62,7 @@
         dest: "/tmp/{{ bundle.name }}.zip"
         owner: "root"
         group: "root"
-        mode: 0700
+        mode: "0700"
 
     - name: "Import cryptographic content if needed (CA)"
       loop: "{{ inv_add_apache_confs__configurations_cert_bundles }}"
@@ -74,4 +74,4 @@
         dest: "/tmp/{{ bundle.name }}"
         owner: "root"
         group: "root"
-        mode: 0700
+        mode: "0700"
