--- a/molecule/cicd-docker-dind/molecule.yml
+++ b/molecule/cicd-docker-dind/molecule.yml
@@ -8,9 +8,9 @@ driver:
   name: "docker"
 
 platforms:
-  - name: "molecule-cicd-debian-12-instance-1-deploy-portainer"
-    image: "${NEXUS_DOCKER_GROUP_REGISTRY}/${DOCKER_IMAGE__ANSIBLETEST_DEBIAN_12}"
-    hostname: "molecule-cicd-debian-12-instance-1-deploy-portainer"
+  - name: "molecule-cicd-docker-dind-instance-1-deploy-portainer"
+    image: "${NEXUS_DOCKER_GROUP_REGISTRY}/${DOCKER_IMAGE__ANSIBLETEST_DOCKER_DIND}"
+    hostname: "molecule-cicd-docker-dind-instance-1-deploy-portainer"
     privileged: true
     pre_build_image: true
     command: "/sbin/init"
@@ -23,7 +23,7 @@ platforms:
     cgroup_manager: "cgroupfs"
     storage_driver: "overlay2"
     networks:
-      - name: "molecule-cicd-debian-12-deploy-portainer"
+      - name: "molecule-cicd-docker-dind-deploy-portainer"
 
 provisioner:
   name: "ansible"
@@ -51,7 +51,7 @@ verifier:
   name: "ansible"
 
 scenario:
-  name: "cicd-debian-12"
+  name: "cicd-docker-dind"
   test_sequence:
     - "destroy"
     - "syntax"
